--- a/style.css
+++ b/style.css
@@ -32,12 +32,18 @@ p{
 
 h2{font-size: 3em;
 }
+
+
+
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: var(--main-color);
     padding: 30px 20px 10px 20px;
+}
+.menu-burger{
+    display: none;
 }
 
 .logo img {
@@ -95,9 +101,10 @@ h2{font-size: 3em;
 }
 
 .search-bar input {
-    padding: 8px;
+    padding: 3%;
     border: none;
     border-radius: 4px;
+    width: 90%;
 }
 
 .reveal {
