--- a/style.css
+++ b/style.css
@@ -33,7 +33,55 @@ p{
 h2{font-size: 3em;
 }
 
+.sidenav{
+    display: none;
+}
 
+.sidenav {
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: -250px;
+    background-color: var(--main-color);
+    padding-top: 60px;
+    transition: left 0.5s ease;
+  }
+  
+  .sidenav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  /* Sidenav menu links */
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #ffffff;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover {
+    color: #111;
+  }
+  
+  /* Active class */
+  .sidenav.active {
+    left: 0;
+  }
+  
+  /* Close btn */
+  .sidenav .close {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+  }
+  
 
 .navbar {
     display: flex;
@@ -41,9 +89,6 @@ h2{font-size: 3em;
     align-items: center;
     background-color: var(--main-color);
     padding: 30px 20px 10px 20px;
-}
-.menu-burger{
-    display: none;
 }
 
 .logo img {
@@ -268,5 +313,12 @@ body {
     100% {
         left: 100%;
         right: 0;
+    }
+}
+
+
+@media only screen and (max-width: 600px){
+    div.sidenav{
+        display: block;
     }
 }
