--- a/accueil.css
+++ b/accueil.css
@@ -344,6 +344,7 @@ span{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 .gamme_card{
     display: flex;
