--- a/accueil.css
+++ b/accueil.css
@@ -1,4 +1,6 @@
-
+body{
+    overflow-x: hidden;
+}
 .acc_pres{
     display: flex;
     justify-content: center;
@@ -50,6 +52,7 @@ span{
     display: flex;
     justify-content: space-between;
     gap:100px;
+    flex-wrap: wrap;
 
 }
 
@@ -116,7 +119,7 @@ span{
     display: none;
 }
 .contact_phone{
-    width: 100%;
+    width: 50%;
     text-align: start;
 }
 
@@ -483,11 +486,12 @@ span{
 .avis_client_container {
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 5px;
     width: 100%;
     justify-content: space-between;
     align-items: flex-start;
     margin:50px 0;
+    flex-wrap: wrap;
 
 }
 
