--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     box-sizing: border-box;
+    overflow-x: hidden;
 
 }
 :root{
@@ -172,12 +173,13 @@ footer{
 .second_section_footer{
     display: flex;
     flex-direction: row;
+    width: 90%;
 
 }
 
 .topic_section{
     flex-direction: row;
-    margin-right: 80px;
+    margin-right: 40px;
     text-align: center;
     font-family: var(--font-title);
 }
@@ -196,7 +198,7 @@ footer{
 .topic_section2{
     width: 100%;
     flex-direction: row;
-    margin-right: 80px;
+    margin-right: 40px;
     text-align: center;
     font-family: var(--font-title);
 }
